--- a/UPOSS/Controls/NavigationBar.xaml
+++ b/UPOSS/Controls/NavigationBar.xaml
@@ -76,9 +76,11 @@
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="Padding" Value="20 28"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                 </Style>
             </ListView.ItemContainerStyle>
 
+            <!--Users-->
             <ListViewItem Padding="20 40 20 28">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonUp">
@@ -92,6 +94,7 @@
                 </StackPanel>
             </ListViewItem>
 
+            <!--Branches-->
             <ListViewItem>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonUp">
@@ -105,6 +108,7 @@
                 </StackPanel>
             </ListViewItem>
 
+            <!--Products-->
             <ListViewItem>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonUp">
@@ -118,6 +122,7 @@
                 </StackPanel>
             </ListViewItem>
 
+            <!--Cashier-->
             <ListViewItem>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonUp">
@@ -131,32 +136,35 @@
                 </StackPanel>
             </ListViewItem>
 
+            <!--Analytics-->
             <ListViewItem>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonUp">
-                        <i:InvokeCommandAction Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Sales}"/>
+                        <i:InvokeCommandAction Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Analytics}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
 
                 <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="Summit" VerticalAlignment="Center" Margin="5 0 10 0" Width="50" Height="50"/>
-                    <TextBlock Text="Sales" VerticalAlignment="Center" Margin="5" FontSize="40"/>
+                    <materialDesign:PackIcon Kind="ChartArc" VerticalAlignment="Center" Margin="5 0 10 0" Width="50" Height="50"/>
+                    <TextBlock Text="Analytics" VerticalAlignment="Center" Margin="5" FontSize="40"/>
                 </StackPanel>
             </ListViewItem>
 
+            <!--Settings-->
             <ListViewItem>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonUp">
-                        <i:InvokeCommandAction Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Help}"/>
+                        <i:InvokeCommandAction Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Setting}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
 
                 <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="Help" VerticalAlignment="Center" Margin="5 0 10 0" Width="50" Height="50"/>
-                    <TextBlock Text="Help" VerticalAlignment="Center" Margin="5" FontSize="40"/>
+                    <materialDesign:PackIcon Kind="Settings" VerticalAlignment="Center" Margin="5 0 10 0" Width="50" Height="50"/>
+                    <TextBlock Text="Settings" VerticalAlignment="Center" Margin="5" FontSize="40"/>
                 </StackPanel>
             </ListViewItem>
 
+            <!--Exit-->
             <ListViewItem MouseLeftButtonUp="LV_ExitBtn">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Logout" VerticalAlignment="Center" Margin="5 0 10 0" Width="50" Height="50"/>
