--- a/UPOSS/App.xaml
+++ b/UPOSS/App.xaml
@@ -4,7 +4,8 @@
              xmlns:local="clr-namespace:UPOSS"
              
              xmlns:viewModels="clr-namespace:UPOSS.ViewModels"
-             xmlns:views="clr-namespace:UPOSS.Views" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+             xmlns:views="clr-namespace:UPOSS.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     
             <!-- StartupUri="MainWindow.xaml" , handled by code behind -->
 
@@ -47,12 +48,12 @@
                 <views:CashierView/>
             </DataTemplate>
 
-            <DataTemplate DataType="{x:Type viewModels:SalesViewModel}">
-                <views:SalesView/>
+            <DataTemplate DataType="{x:Type viewModels:AnalyticsViewModel}">
+                <views:AnalyticsView/>
             </DataTemplate>
 
-            <DataTemplate DataType="{x:Type viewModels:HelpViewModel}">
-                <views:HelpView/>
+            <DataTemplate DataType="{x:Type viewModels:SettingViewModel}">
+                <views:SettingView/>
             </DataTemplate>
         </ResourceDictionary>
 
