--- a/UPOSS/Views/BranchView.xaml
+++ b/UPOSS/Views/BranchView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UPOSS.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -46,8 +47,9 @@
                             <TextBlock Text="Branch Name : " FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
 
                             <TextBox MinWidth="100"
-                         BorderBrush="Black" BorderThickness="1" MaxWidth="100"
-                         Text="{Binding Path=InputBranch.Name, Mode=TwoWay}">
+                             BorderBrush="Black" BorderThickness="1" MaxWidth="100"
+                             materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
+                             Text="{Binding Path=InputBranch.Name, Mode=TwoWay}">
                                 <TextBox.Resources>
                                     <Style TargetType="{x:Type Border}">
                                         <Setter Property="CornerRadius" Value="6"/>
