--- a/UPOSS/Controls/Dialog/CashierPrintReceiptDialog.xaml
+++ b/UPOSS/Controls/Dialog/CashierPrintReceiptDialog.xaml
@@ -112,6 +112,9 @@
                     <TextBlock x:Name="tbkChange" HorizontalAlignment="Right" Margin="1 0"/>
                 </Grid>
             </StackPanel>
+
+            <!--Extra Message-->
+            <TextBlock Text="- Welcome back again -" FontWeight="Bold" HorizontalAlignment="Center" FontSize="10" Margin="0 5 0 0"/>
         </StackPanel>
     </Grid>
 </Window>
