--- a/UPOSS/Views/CashierView.xaml
+++ b/UPOSS/Views/CashierView.xaml
@@ -65,7 +65,8 @@
                                         HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25"
                                         materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
                                         Text="{Binding Path=InputProduct.Barcode, Mode=TwoWay}"
-                                        TextChanged="tbBarcode_TextChanged" KeyDown="tbBarcode_KeyDown">
+                                        TextChanged="tbBarcode_TextChanged" KeyDown="tbBarcode_KeyDown"
+                                        PreviewTextInput="searchSection_PreviewTextInput">
                                         <TextBox.Resources>
                                             <Style TargetType="{x:Type Border}">
                                                 <Setter Property="CornerRadius" Value="6"/>
@@ -103,7 +104,8 @@
                                         HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25"
                                         materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
                                         Text="{Binding Path=InputProduct.Product_no, Mode=TwoWay}"
-                                        TextChanged="tbProductNo_TextChanged">
+                                        TextChanged="tbProductNo_TextChanged"
+                                        PreviewTextInput="searchSection_PreviewTextInput">
                                         <TextBox.Resources>
                                             <Style TargetType="{x:Type Border}">
                                                 <Setter Property="CornerRadius" Value="6"/>
@@ -141,7 +143,8 @@
                                         HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25"
                                         materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
                                         Text="{Binding Path=InputProduct.Name, Mode=TwoWay}"
-                                        TextChanged="tbProductName_TextChanged">
+                                        TextChanged="tbProductName_TextChanged"
+                                        PreviewTextInput="searchSection_PreviewTextInput">
                                         <TextBox.Resources>
                                             <Style TargetType="{x:Type Border}">
                                                 <Setter Property="CornerRadius" Value="6"/>
